# Dynatron

./: .gitignore  Makefile  Makefile.am  common.mk  configure.ac  dy_core.c  dy_despatch.c  dy_listener.c  dy_log.c  dy_message.c  dy_object.c  dy_queue.c  dy_thread.c  dynatron.c  dynatron.h
t/: .gitignore  Makefile.am  basic  basic.c  queue.c  util.c
